# Hypothesis_Pro_McKinsey_Replacement

./: .env.example  .gitignore  2X2_MATRIX_IMPLEMENTATION_GUIDE.md  Dockerfile  GOOGLE_ADK_VALIDATION.md  IMPLEMENTATION-STATUS.md  IMPLEMENTATION_SUMMARY.md  MULTI-MATRIX-PROGRESS.md  Makefile  NEXT-STEPS.md  QUICKSTART.md  README.md  RICH_TREE_SUCCESS.md  TASKS.md  project_description.md  pyproject.toml  requirements.txt  test_output_rich_tree.json  test_real_agent.py  test_rich_tree_generation.py
.claude/: CLAUDE.md  SHARED-PATTERNS.md
.claude/commands/: execute-phase.md  execute-prp.md  generate-prp.md  recover-context.md
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
PRPs/: PRP-TEMPLATE.md
agents/strategic_consultant/: __init__.py  agent.py
demos/: demo_usage.py
deployment/terraform/: build_triggers.tf  variables.tf
docs/archive/: TASKS.md
docs/project-requirements/: README.md  agent_prompts.md  capstone_architecture_plan.md  framework_templates.json  user_experience_workflow.md
evaluation/: strategic_consultant.evalset.json  strategic_consultant_adk.evalset.json  test_config.json
hypothesis-tree-ui/: README.md  package-lock.json  package.json
hypothesis-tree-ui/app/: globals.css  layout.tsx  page.tsx
storage/projects/: fall_detection_template.json  (+3 more)
strategic_consultant_agent/: __init__.py  agent.py  fast_api_app.py  logging_config.py  persistence_integration.py  session_manager.py  tracing.py
tests/: test_agent.py  test_cross_session_persistence.py  test_evaluation.py  test_logging_config.py  test_session_management.py
(+61 files in other folders)
